# yandex-cpp-middle-sprint1

./: .gitignore  CMakeLists.txt  OpenSSL CLI howto.txt  README.md  build.sh  conanfile.py  decrypted.txt
.devcontainer/: Dockerfile
include/: cmd_options.h  crypto_guard_ctx.h
src/: cmd_options.cpp  crypto_guard_ctx.cpp  main.cpp
tests/: cmd_options_test.cpp  crypo_guard_ctx_test.cpp  crypto_guard_ctx_test.cpp
